Add hreflang links

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="alternate" hreflang="nl" href="https://ivanv97.github.io/i18n-google/translate/nl" />
+  <link rel="alternate" hreflang="fr" href="https://ivanv97.github.io/i18n-google/translate/fr" />
+  <link rel="alternate" hreflang="en" href="https://ivanv97.github.io/i18n-google/translate/en" />
 </head>
 <body>
   <app-root></app-root>
