--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>I18nGoogle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="alternate" hreflang="nl" href="https://ivanv97.github.io/i18n-google/translate/nl" />
-  <link rel="alternate" hreflang="fr" href="https://ivanv97.github.io/i18n-google/translate/fr" />
-  <link rel="alternate" hreflang="en" href="https://ivanv97.github.io/i18n-google/translate/en" />
+  <link rel="alternate" hreflang="nl" href="https://ivanv97.github.io/i18n-google/nl" />
+  <link rel="alternate" hreflang="fr" href="https://ivanv97.github.io/i18n-google/fr" />
+  <link rel="alternate" hreflang="en" href="https://ivanv97.github.io/i18n-google/en" />
+  <link rel="alternate" hreflang="x-default" href="https://ivanv97.github.io/i18n-google/nl" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
