--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="alternate" hreflang="en" href="https://ivanv97.github.io/i18n-google/" />
   <link rel="alternate" hreflang="nl" href="https://ivanv97.github.io/i18n-google/nl" />
   <link rel="alternate" hreflang="fr" href="https://ivanv97.github.io/i18n-google/fr" />
-  <link rel="alternate" hreflang="en" href="https://ivanv97.github.io/i18n-google/en" />
   <link rel="alternate" hreflang="x-default" href="https://ivanv97.github.io/i18n-google/nl" />
 </head>
 
